--- a/front-end/package.json
+++ b/front-end/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "front-end",
+  "name": "awesomeproject",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -9,22 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.0",
-    "@fortawesome/free-solid-svg-icons": "^6.5.1",
-    "@fortawesome/react-native-fontawesome": "^0.3.0",
-    "@react-native-async-storage/async-storage": "^1.22.2",
-    "@react-native-picker/picker": "^2.6.1",
-    "@react-navigation/bottom-tabs": "^6.5.12",
-    "@react-navigation/native": "^6.1.10",
-    "@react-navigation/stack": "^6.3.21",
+    "@react-native-async-storage/async-storage": "^1.22.3",
+    "@react-native-picker/picker": "2.4.10",
+    "@react-navigation/bottom-tabs": "^6.5.16",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.22",
+    "@react-navigation/stack": "^6.3.17",
     "@rneui/themed": "^4.0.0-rc.8",
+    "asyncstorage": "^1.5.0",
     "axios": "^1.6.7",
-    "expo": "~50.0.7",
-    "expo-build-properties": "~0.11.1",
-    "expo-status-bar": "~1.11.1",
+    "expo": "~49.0.8",
+    "expo-checkbox": "~2.4.0",
+    "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.73.4",
-    "react-native-restart": "^0.0.27"
+    "react-native": "0.72.4",
+    "react-native-ios-picker": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
