--- a/front-end/package.json
+++ b/front-end/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.6.7",
     "expo": "~49.0.8",
     "expo-checkbox": "~2.4.0",
+    "expo-image-picker": "^14.7.1",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.4",
