--- a/front-end/package.json
+++ b/front-end/package.json
@@ -20,13 +20,14 @@
     "asyncstorage": "^1.5.0",
     "axios": "^1.6.7",
     "expo": "~49.0.8",
+    "expo-checkbox": "~2.4.0",
     "expo-image-picker": "^14.7.1",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-image-picker": "^7.1.2",
     "react-native-ios-picker": "^1.0.0",
-    "react-native-modal": "^13.0.1",
-    "expo-checkbox": "~2.4.0"
+    "react-native-modal": "^13.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
