--- a/back-end/package.json
+++ b/back-end/package.json
@@ -11,14 +11,19 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "config": "^3.3.11",
     "cors": "^2.8.5",
+    "dateformat": "^5.0.3",
     "dotenv": "^16.4.1",
     "express": "^4.18.3",
     "firebase": "^10.9.0",
     "firebase-admin": "^12.0.0",
+    "jquery": "^3.7.1",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.1.1",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.8"
+    "nodemailer": "^6.9.8",
+    "request": "^2.88.2"
   }
 }
