--- a/back-end/package.json
+++ b/back-end/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
-    
   },
   "keywords": [],
   "author": "",
@@ -26,6 +25,7 @@
     "mongoose": "^8.1.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.8",
+    "react-firebase-hooks": "^5.1.1",
     "request": "^2.88.2"
   }
 }
