--- a/front-end/package.json
+++ b/front-end/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/checkbox": "^0.5.17",
     "@react-native-picker/picker": "2.4.10",
     "@react-navigation/bottom-tabs": "^6.5.16",
+    "@react-navigation/elements": "^1.3.30",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.22",
     "@react-navigation/stack": "^6.3.17",
@@ -23,12 +24,18 @@
     "expo-checkbox": "~2.4.0",
     "expo-image-picker": "^14.7.1",
     "expo-status-bar": "~1.6.0",
+    "expo-web-browser": "~12.3.2",
+    "firebase": "^10.11.0",
+    "firebase-admin": "^12.1.0",
+    "fs": "^0.0.1-security",
+    "multer": "^1.4.5-lts.1",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-gifted-chat": "^2.4.0",
     "react-native-image-picker": "^7.1.2",
     "react-native-ios-picker": "^1.0.0",
     "react-native-modal": "^13.0.1",
-    "expo-web-browser": "~12.3.2"
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
