--- a/front-end/package.json
+++ b/front-end/package.json
@@ -35,6 +35,7 @@
     "react-native-image-picker": "^7.1.2",
     "react-native-ios-picker": "^1.0.0",
     "react-native-modal": "^13.0.1",
+    "react-native-websocket": "^1.0.2",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
