--- a/back-end/package.json
+++ b/back-end/package.json
@@ -5,18 +5,22 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "nodemon src/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "chart.js": "^4.4.2",
     "config": "^3.3.11",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dateformat": "^5.0.3",
     "dotenv": "^16.4.1",
     "express": "^4.18.3",
+    "express-handlebars": "^7.1.2",
+    "express-session": "^1.18.0",
     "firebase": "^10.9.0",
     "firebase-admin": "^12.0.0",
     "jquery": "^3.7.1",
@@ -26,6 +30,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.8",
     "react-firebase-hooks": "^5.1.1",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "ws": "^8.16.0"
   }
 }
