--- a/back-end/package.json
+++ b/back-end/package.json
@@ -31,6 +31,8 @@
     "nodemailer": "^6.9.8",
     "react-firebase-hooks": "^5.1.1",
     "request": "^2.88.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "ws": "^8.16.0"
   }
 }
